--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="logo_titre">
-			<img src="img/logo.png" alt="the logo">
+			<img src="logo.png" alt="the logo">
 			</div>
 
 			<div id="entete"><h1>SFCV</h1></div>
