--- a/personaliser.html
+++ b/personaliser.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<div class="logo_titre">
-			<img src="img/logo.png" alt="the logo"></div>
+			<img src="logo.png" alt="the logo"></div>
 			<div id="entete"><h1>SFCV</h1></div>
 			<div id="entete3"><h3>N°1 des caves à vins</h3></div>
 		</header>
