--- a/produits.html
+++ b/produits.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div class="logo_titre">
-		<img src="img/logo.png" alt="the logo"></div>
+		<img src="logo.png" alt="the logo"></div>
 		<div id="entete"><h1>SFCV</h1></div>
 		<div id="entete3"><h3>N°1 des caves à vins</h3></div>
 	</header>
@@ -31,7 +31,7 @@
 	</tr>
 
 	<tr>
-		<td rowspan="3"><img src="img/AV175.jpg" alt="175"></td>
+		<td rowspan="3"><img src="AV175.jpg" alt="175"></td>
 		<td>Contenance</td>
 		<td>Systeme froid  </td>
 		<td>Dimension(hxlxp)</td>
@@ -58,7 +58,7 @@
 	</tr>
 	<tr>
 
-		<td rowspan="3"><img src="img/AV205.jpg" alt="205"></td>
+		<td rowspan="3"><img src="AV205.jpg" alt="205"></td>
 		<td>Contenance</td>
 		<td>Systeme froid  </td>
 		<td>Dimension(hxlxp)</td>
@@ -91,7 +91,7 @@
 	</tr>
 	<tr>
 
-		<td rowspan="3"><img src="img/CV183.jpg" alt="183"></td>
+		<td rowspan="3"><img src="CV183.jpg" alt="183"></td>
 		<td>Contenance</td>
 		<td>Systeme froid  </td>
 		<td>Dimension(hxlxp)</td>
