--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
 
 <header>
 	<div class="logo_titre">
-	<img src="img/logo.png" alt="the logo"></div>
+	<img src="logo.png" alt="the logo"></div>
 	<div id="entete"><h1>SFCV</h1></div>
 	<div id="entete3"><h3>N°1 des caves à vins</h3></div>
 </header>
@@ -57,7 +57,7 @@
 <h2>Visitez la cave de Michel Rostang</h2>
 
 <video width="320" height="240" controls>
-      <source src="video/visite.mp4" type=video/mp4> 
+      <source src="visite.mp4" type=video/mp4> 
     </video>
 
 
